# concurrentes

./: .gitignore  Cargo.toml  README.md
src/: aliases.rs  errores.rs  lib.rs  mensajes.rs  pedido.rs
src/desconexion/: dios.rs  main.rs  mod.rs
src/ecommerce/: handler.rs  main.rs  mod.rs
src/generators/: main.rs  mod.rs  pedidos_gen.rs  stock_gen.rs
src/local/: empleado.rs  guardian.rs  main.rs  mensajero.rs  mensajes_actores.rs  mod.rs  servidor.rs  stock.rs
